--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="logo">DEVon</div>
       <div>
         <ul class="nav-links">
-          <li><a href="about">About</a></li>
-          <li><a href="experience">Experience</a></li>
-          <li><a href="projects">Projects</a></li>
-          <li><a href="contacts">Contacts</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contacts</a></li>
         </ul>
       </div>
     </nav>
@@ -29,13 +29,214 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="about" onclick="toggleMenu()">About</a></li>
-          <li><a href="experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="contacts" onclick="toggleMenu()">Contacts</a></li>
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#contacts" onclick="toggleMenu()">Contacts</a></li>
         </div>
       </div>
     </nav>
+    <section id="profile">
+        <div class="section_pic-container">
+            <img src="assets/ProfilePic.jpg" alt="profile-pic" class="profile-pic" />
+            <div class="section_text">
+                <p class="section_text_p1">Hello i'm</p>
+                <h1 class="title">Devon</h1>
+                <p class="section_text_p2">Developer</p>
+                <div class="btn-container">
+                    <button class="btn btn-color-2" onclick="window.open('/assets/resume-example.pdf')">Download CV </button>
+                    <button class="btn btn-color-1" onclick="location.href='#contact'">Contact</button>
+                </div>
+                <div id="socials-container">
+                    <img src="./assets/linkedin.png" alt="my linkedin profile"
+                    class="icon" onclick="location.href='http://linkedin.com/'" />
+                    <img src="./assets/github.png" alt="my github profile"
+                    class="icon" onclick="location.href='http://github.com/DEVonlogs'" />
+                </div>
+            </div>   
+        </div>
+    </section>
+    <section id="about">
+      <p class="section_text_p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section_pic-container">
+          <img src="/assets/about-pic.png" alt="profile pic" class="about-pic" />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img src="assets/experience.png" alt="Experience icon" class="icon" />
+              <h3>Experience</h3>
+              <p>2+ years <br /> Frontend Developer</p>
+            </div>
+            <div class="details-container">
+              <img src="assets/education.png" alt="Education icon" class="icon" />
+              <h3>Education</h3>
+              <p>B.c. Bachlors<br /> M.Sc. Masters Degree</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, 
+              fuga eaque doloribus a sapiente sed laboriosam dicta fugiat quae ea error 
+              quidem nihil, numquam laudantium quo adipisci quis veritatis exercitationem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt, distinctio ad alias reiciendis est laudantium, voluptatibus fugiat dicta, quod assumenda vel sit tempore. Facilis dolorum, fugiat id
+               ipsum blanditiis recusandae! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui sint consequatur eos doloribus quidem blanditiis nam reiciendis voluptas, distinctio aliquam, hic enim eaque vel iste tempora placeat nostrum numquam adipisci? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa repudiandae eum in! Reprehenderit laborum officiis omnis temporibus dolores soluta facilis. Dolorem incidunt perspiciatis numquam laborum debitis quo enim similique. Optio.
+              
+              </p>
+          </div>
+        </div>
+      </div>
+      <img src="/assets/arrow.png" alt="Arrow icon" class="icon arrow"
+      onclick="location.href='./experience'" />
+    </section>
+    <section id="experience">
+      <p class="section_text_p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>HTML</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>CSS</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>JavaScript</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+            
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>React</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Backend Development</h2>
+            <div class="article-container">
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>PostgreSQL</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>NodeJS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>GIT</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="/assets/checkmark.png" alt="experience icon" class="icon" />
+                <div>
+                  <h3>GOLANG</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img src="/assets/arrow.png"
+      alt="arrow icon"
+      class="icon arrow"
+      onclick="location.href='/projects'" />
+    </section>
+    <section id="projects">
+      <p class="section_text_p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="/assets/project-1.png" alt="Project 1" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Project 1</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https//github.com/'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https//github.com/'">Live Demo</button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="/assets/project-2.png" alt="Project 2" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Project 2</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https//github.com/'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https//github.com/'">Live Demo</button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="/assets/project-3.png" alt="Project 3" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Project 3</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https//github.com/'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https//github.com/'">Live Demo</button>
+          </div>
+        </div>
+        </div>
+      </div>
+      <img src="/assets/arrow.png"
+      alt="arrow icon"
+      class="icon arrow"
+      onclick="location.href='/'" />
+    </section>
+    <section id="contact">
+    <p class="section_text_p1">Get In Touch!</p>
+    <h1 class="title">Contact Me</h1>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <img src="assets/email.png" alt="email icon" class="icon contact-icon email-icon" />
+        <p><a href="mailto:exampleemail@gmail.com">Example@gmail.com</a></p>
+      </div>
+      <div class="contact-info-container">
+        <img src="assets/linkedin.png" alt="linkedin icon" class="icon contact-icon" />
+        <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+      </div>
+    </div>
+    </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contacts</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Devon. All Rights Reserved.</p>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
