--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
       onclick="location.href='/'" />
     </section>
     <section id="contact">
-    <p class="section_text_p1">Get In Touch!</p>
-    <h1 class="title">Contact Me</h1>
+    <p class="section_text_p1">Get In Touch</p>
+    <h1 class="title">Contact Me!</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="assets/email.png" alt="email icon" class="icon contact-icon email-icon" />
